--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -9,7 +9,7 @@
     android:layout_height="190dp">
 
     <ImageView
-        android:src="@drawable/ic_person"
+        android:src="@drawable/ic_water"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
